FF-1429 #time: 2h 15m  Feature:Buyer update cart Description: changes in the api documentation and view_cart api
